--- a/css/quem-somos.css
+++ b/css/quem-somos.css
@@ -1,6 +1,10 @@
+.quem-somos-bg{
+  background-color: #008037;
+  color: white;
+
+}
 .quem-somos{
-  padding: 0 20px;
-  
+  padding: 80px 20px;
 
 }
 
@@ -10,7 +14,7 @@
 }
 
 .quem-somos span{
-  color: #008037;
+  color: #BEEE62;
 }
 
 .quem-somos-card {
@@ -24,7 +28,7 @@
 .quem-somos-card div{
   max-width: 350px;
   height: 100%;
-  box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.1) ;
+  box-shadow: 0 0 1px 2px rgba(255, 255, 255, 0.2) ;
   padding: 10px 20px;
   border-radius: 4px;
   margin-top: 40px;
