--- a/css/introducao.css
+++ b/css/introducao.css
@@ -1,6 +1,7 @@
 .introducao-bg{
-  background-color: #BEEE62;
+  background-color: #5B80CD;
   box-shadow: inset 0 -120px  white;
+  color: white
 }
 
 .introducao{
@@ -41,13 +42,14 @@
   color: white ;
   font-family: "Open Sans";
   font-size: .95rem;
-  background: #008037;
+  background:  #FCD116;
   border-radius: 4px;
   text-transform: uppercase;
+  color: black;
 }
 
 .introducao a:hover{
- background: #059643;
+ background: #FFA500;
 }
 
 @media(max-width:800px){
@@ -69,6 +71,7 @@
 @media(max-width:600px){
   .introducao-bg{
     box-shadow: none;
+    padding-bottom: 20px;
   }
   .introducao{
     grid-template-columns: 1fr;
