--- a/css/quem-somos.css
+++ b/css/quem-somos.css
@@ -17,6 +17,7 @@
 .vantagens-cards{
   display: flex;
   gap: 40px;
+
 }
 
 .vantagens-cards-contain{
@@ -36,23 +37,50 @@
   display: flex;
   align-items: center;
   padding-bottom: 20px;
+  
+}
 
+.vantagens-cards-contain h3::after{
+  content: '';
+  position: absolute;
+  display: block;
+  bottom: -6px;
+  width: 100%;
+  height: 2px;
+  background-color: #faf037;
 }
 
 .vantagens-titulo img{
   width: 30px;
   margin-left: 10px;
-
+  
 }
 
 .vantagens-titulo h3{
   font-family: "Raleway";
   font-size: 1.5rem;
+  position: relative;
 }
 
-@media(max-width:790px){
+@media(max-width:940px){
   .vantagens-cards{
-    display: block; 
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .vantagens h2{
+    text-align: center;
+  }
+  .vantagens-cards-contain{
+    margin: 0 auto;    
+
+  }
+} 
+
+@media(max-width:687px){
+  .vantagens-cards{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
   }
   .vantagens-cards-contain{
     margin-bottom: 20px;
