--- a/css/introducao.css
+++ b/css/introducao.css
@@ -12,8 +12,8 @@
 }
 
 .introducao-conteudo{
-  align-self: end;
-  padding-bottom: 180px;
+  align-self: center;
+  padding-bottom: 80px;
 }
 
 .introducao img{
